--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "github",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://JulienSuan.github.io/github-profil-stats-saerch",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,7 +20,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
   },
   "eslintConfig": {
     "extends": [
